# goRequest

./: .env.dist  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  setup.sh
.github/workflows/: cpp-ci.yml
data/: buttons.json  init-go-request.json
include/: jb_bool.hpp  jb_file.hpp  jb_src.hpp
include/go_request/: button.hpp  goRequest.hpp  macros.hpp
include/jb_lib/: jb_array.hpp  jb_bool.hpp  jb_file.hpp  jb_int.hpp  jb_macros.hpp  jb_str.hpp  jb_vector.hpp
includes/: jb_array.hpp  jb_file.hpp  jb_int.hpp  jb_src.hpp
lib/: Makefile
lib/jb/: CMakeLists.txt  Makefile
lib/jb/src/array/: strToArray.cpp
lib/jb/src/bool/: charIsNum.cpp  check_str_last_index.cpp
lib/jb/src/file/: env_handler.cpp  get-json.cpp  get_file_content.cpp  json_obj.cpp  json_parser.cpp
lib/jb/src/int/: getNumber.cpp  get_number.cpp  str_len.cpp
lib/jb/src/str/: string_to_char_string.cpp  vector_to_string.cpp
lib/jb/src/vector/: print_vector.cpp  str_to_vector.cpp
src/: main.cpp
src/elements/: Button.cpp  Colors.cpp  GoRequest.cpp
